[package]
name = "RustBytes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = { version = "1.0.116", features = ["default"] }
tokio = { version = "1.37.0", features = ["full"] }
